--- a/styles/style.css
+++ b/styles/style.css
@@ -1,69 +1,28 @@
+
 .row {
+  max-width: 1020px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 100px;
 }
 
-.wrapper {
-  width: 992px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* BLOCCO LEZIONI */
-#lezioni .row>.left,
-#lezioni .row>.right {
-  width: 50%;
-  float: left;
-}
-
-#lezioni .row img {
-  /* per centrare orizzontalmente */
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-#lezioni {
-  text-align: center;
-}
-
-/* BLOCCO STEPS */
-#steps .row>.left,
-#steps .row>.central,
-#steps .row>.right {
-  float: left;
-  width: 33%;
-}
-
-#steps {
-  text-align: center;
-}
-
 /* BLOCCO PERCHE */
-#why {
-  text-align: center;
-}
 
-#why .row>.first,
-#why .row>.second,
-#why .row>.third {
-  width: 100%;
+.first,
+.second,
+.third {
   margin-top: 80px;
 }
 
-#why .row img {
+.why-section .row img {
   background-color: #428bca;
   border-radius: 50%;
   padding: 30px
 }
 
 /* COMMON */
-.row::after {
-  content: '';
-  display: table;
-  clear: both;
-}
 
-.container.grey {
+.container-grey {
   background-color: #f9f9f9;
 }
 
@@ -71,6 +30,25 @@ img {
   height: 200px;
 }
 
-.clear {
-  clear: both;
+@media screen and (max-width: 767px) {
+
+  img {
+    height: 130px;
+  }
+
+  h1 {
+    padding: 15px 0 15px 0;
+  }
+
+  .container-green {
+    background-color: #f2f2cd;
+  }
+
+  .container-white {
+    background-color: white;
+  }
+
+  .mt-xs-0 {
+    margin-top: 0;
+  }
 }
